--- a/RadHopper/RadHopper.csproj
+++ b/RadHopper/RadHopper.csproj
@@ -18,6 +18,10 @@
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     </PropertyGroup>
 
+	<ItemGroup>
+		<InternalsVisibleTo Include="RadHopper.RabbitMQ" />
+	</ItemGroup>
+
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.10" />
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.10" />
